objects/Product2.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Admins__c</fullName>
        <description>Number of admins allowed for currrent service</description>
        <label>Admins</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_NRR__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Non-recurring revenue product</inlineHelpText>
        <label>Is NRR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editors__c</fullName>
        <description>Number of editors allowed for current service</description>
        <label>Editors</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support__c</fullName>
        <description>Support type</description>
        <label>Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Priority</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Viewers__c</fullName>
        <description>Number of viewers allowed for current service.</description>
        <label>Viewers</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>Number of products allowed for current service</description>
        <label>Products</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Sku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Sku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contributors__c</fullName>
        <description>Number of contributors allowed for current service</description>
        <label>Contributors</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_PB_ID__c</fullName>
        <label>Product PB ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>Response Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12h</fullName>
                </value>
                <value>
                    <fullName>24h</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Hours__c</fullName>
        <label>Support Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>8/5</fullName>
                </value>
                <value>
                    <fullName>24/5</fullName>
                </value>
                <value>
                    <fullName>24/7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ARR_Last_Updated__c</fullName>
        <inlineHelpText>Last time ARR changed</inlineHelpText>
        <label>ARR Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Software_or_Service_Product__c</fullName>
        <description>Products are categorised into either Software or Service.</description>
        <inlineHelpText>Products are categorised into either Software or Service.</inlineHelpText>
        <label>Software or Service Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SatisMeter_Response_Per_month__c</fullName>
        <description>How many SatisMeter Responses are included in this product</description>
        <inlineHelpText>How many SatisMeter Responses are included in this product</inlineHelpText>
        <label># of SatisMeter Responses per month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.SKU</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Contributors__c</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>Is_NRR__c</columns>
        <columns>Product_PB_ID__c</columns>
        <columns>Products__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.EXTERNAL_ID</columns>
        <columns>Software_or_Service_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <listViews>
        <fullName>Services_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.SKU</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>Product_PB_ID__c</columns>
        <columns>Products__c</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Is_NRR__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Service_Sku__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Services Products</label>
        <language>en_US</language>
    </listViews>
</CustomObject>